--- a/projects.html
+++ b/projects.html
@@ -128,10 +128,61 @@
         </details>
       </article>
 
-      <article class="card">
+      <!-- <article class="card">
         <div class="thumb">Image</div>
         <h3><a href="#">Holonic Control (aDaptioN)</a></h3>
         <p>Delay-aware, fault-tolerant holonic control and optimization for networked CPS.</p>
+      </article> -->
+      <article class="card" style="grid-column: span 3;"> 
+        <div class="thumb" style="background-color: #f4f4f4; color: #555;">
+                  </div>
+        
+        <h3>Holonic Control (aDaptioN) (NSF CPS)</h3>
+        <p><strong>Sponsor:</strong> U.S. National Science Foundation (NSF) Cyber-Physical Systems (CPS) Program</p>
+        <p><strong>Objective:</strong> Develop and validate distributed "holonic" control and optimization algorithms for critical infrastructures (specifically electric distribution grids) that are scalable, flexible, and resilient to cyber-attacks and communication delays.</p>
+
+        <details style="margin-top: 1rem; border-top: 1px solid #eee; padding-top: 1rem;">
+          <summary style="cursor: pointer; color: #0077cc; font-weight: bold;">View Project Scope & Publications</summary>
+          
+          <div style="margin-top: 1rem; font-size: 0.95em; line-height: 1.6;">
+            <h4>Technical Scope:</h4>
+            <ul style="padding-left: 20px; margin-bottom: 15px;">
+              <li><strong>Holonic Architecture:</strong> Designing a recursive, distributed control framework where autonomous "holons" (e.g., microgrids, DERs) coordinate to achieve system-level objectives like voltage and frequency stability.</li>
+              <li><strong>Resilient Optimization:</strong> Developing delay-aware and event-aware optimization algorithms (PAC-X) that function robustly even during communication latency or cyber-disruptions.</li>
+              <li><strong>Cyber-Security:</strong> Integrating data-driven threat intelligence sharing and anomaly detection directly into the control loop.</li>
+              <li><strong>Validation:</strong> Implementing real-time Hardware-in-the-Loop (HIL) testbeds to validate distributed control strategies on industrial automation systems.</li>
+            </ul>
+
+            <h4>Associated Publications:</h4>
+            <ul style="list-style-type: none; padding-left: 0;">
+              <li style="margin-bottom: 10px;">
+                <strong>[1]</strong> <strong>Md Fazley Rafy</strong>, N. Patari, Anurag K. Srivastava (2026). 
+                <em>"HELIX-DER: Holonic event-aware layered Integration and execution for voltage control in distribution network with DERs."</em> 
+                Manuscript submitted to IEEE Transactions on Smart Grid.
+              </li>
+              <li style="margin-bottom: 10px;">
+                <strong>[2]</strong> <strong>Md Fazley Rafy</strong>, P. Sharma, N. Patari, Anurag K. Srivastava, A. Sharma (2025). 
+                <em>"Edge-Driven Distributed Control for Power Distribution: A Real-Time Hardware-in-the-Loop Testbed for Industrial Automation and Applications."</em> 
+                Manuscript Submitted to IEEE Transactions on Industry Applications.
+              </li>
+              <li style="margin-bottom: 10px;">
+                <strong>[3]</strong> Partha S. Sarker, <strong>Md Fazley Rafy</strong>, Anurag K. Srivastava (2025). 
+                <em>"Enabling Cyber-resilient Distribution Systems with DERs: Distributed vs. Centralized Control."</em> 
+                IEEE Transactions on Power Delivery. doi: 10.1109/TPWRD.2025.3626271.
+              </li>
+              <li style="margin-bottom: 10px;">
+                <strong>[4]</strong> <strong>Md Fazley Rafy</strong>, E. Otis Boateng, Vignesh Venkata Gopala Krishnan, Anurag K. Srivastava (2024). 
+                <em>"Cyber-Resilient IoT-based Battery Energy Storage Systems in Power Distribution Systems."</em> 
+                IEEE Transactions on Industry Applications. doi: 10.1109/TIA.2025.3549413.
+              </li>
+              <li style="margin-bottom: 10px;">
+                <strong>[5]</strong> S. Basumallik, <strong>Md Fazley Rafy</strong>, S. Konar, and A. K. Srivastava (2024). 
+                <em>"Holonic Architecture for Cyber-Power Distribution Grid Monitoring and Operation."</em> 
+                Book Chapter in Control, Communication, Monitoring and Protection of Smart Grids. doi: 10.1049/PBPO248E_ch10.
+              </li>
+            </ul>
+          </div>
+        </details>
       </article>
     </div>
   </main>
@@ -145,6 +196,7 @@
   </script>
 </body>
 </html>
+
 
 
 
