--- a/projects.html
+++ b/projects.html
@@ -34,9 +34,8 @@
         <p>PV-based DER-OMS development; cloud tracking and PV generation estimation.</p>
       </article> -->
       <article class="card" style="grid-column: span 3;"> 
-        <div class="thumb" style="background-color: #f4f4f4; color: #555;">
-                  </div>
-        
+        <!-- <div class="thumb" style="background-color: #f4f4f4; color: #555;"></div> -->
+        <div class="thumb" style="background: none; border: none;"> <img src="assets/doe_logo.png" alt="DOE Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> </div>
         <h3>Solar Testbed Project (DOE/WVHTF)</h3>
         <p><strong>Sponsor:</strong> U.S. DOE Solar Energy Technologies Office (SETO) & High Technology Foundation (DE-EE0010166)</p>
         <p><strong>Objective:</strong> Research and development to accelerate the deployment of large-scale solar technology in West Virginia using a 1 MW solar generation system at the I-79 Technology Park.</p>
@@ -81,9 +80,8 @@
         <p>Testbed, applications, and tools for microgrids/active distribution systems with cyber-security measures.</p>
       </article> -->
       <article class="card" style="grid-column: span 3;"> 
-        <div class="thumb" style="background-color: #f4f4f4; color: #555;">
-                  </div>
-        
+        <!-- <div class="thumb" style="background-color: #f4f4f4; color: #555;"></div> -->
+        <div class="thumb" style="background: none; border: none;"> <img src="assets/doe_logo.png" alt="DOE Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> </div>
         <h3>US-India UI-ASSIST (DOE/IUSSTF)</h3>
         <p><strong>Sponsor:</strong> U.S. DOE & Indo-US Science and Technology Foundation (Award DE-IA0000025)</p>
         <p><strong>Objective:</strong> A collaborative R&D effort between 30 US and Indian entities to bridge the gap between smart grid, energy storage, and renewable energy research, facilitating adoption in distribution system operation and planning.</p>
@@ -196,6 +194,7 @@
   </script>
 </body>
 </html>
+
 
 
 
