--- a/projects.html
+++ b/projects.html
@@ -24,18 +24,14 @@
   </header>
 
   <main class="wrap content">
-    <h2>Selected Projects</h2>
-    <p class="muted">Each card will link to a detailed project page later (e.g., projects/helix-der.html). Appreciate your patience!</p>
+    <h2>Current Project</h2>
+    <!-- <p class="muted">Each card will link to a detailed project page later (e.g., projects/helix-der.html). Appreciate your patience!</p> -->
 
     <div class="cards">
-      <!-- <article class="card">
-        <div class="thumb">Image</div>
-        <h3><a href="#">Solar Testbed (DOE/WVHTF)</a></h3>
-        <p>PV-based DER-OMS development; cloud tracking and PV generation estimation.</p>
-      </article> -->
       <article class="card" style="grid-column: span 3;"> 
         <!-- <div class="thumb" style="background-color: #f4f4f4; color: #555;"></div> -->
-        <div class="thumb" style="background: none; border: none;"> <img src="assets/doe_logo.png" alt="DOE Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> </div>
+        <div class="thumb" style="background: none; border: none;"> 
+          <img src="assets/doe_logo.png" alt="DOE Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> </div>
         <h3>Solar Testbed Project (DOE/WVHTF)</h3>
         <p><strong>Sponsor:</strong> U.S. DOE Solar Energy Technologies Office (SETO) & High Technology Foundation (DE-EE0010166)</p>
         <p><strong>Objective:</strong> Research and development to accelerate the deployment of large-scale solar technology in West Virginia using a 1 MW solar generation system at the I-79 Technology Park.</p>
@@ -51,7 +47,6 @@
               <li><strong>Resiliency Analysis:</strong> Developing strategies for hybrid solar-plus-storage solutions to improve grid resiliency against natural disasters and cyber threats.</li>
               <li><strong>Net-Zero Hydrogen:</strong> Investigating efficient strategies for solar-driven hydrogen production via electrolysis.</li>
             </ul>
-
             <h4>Associated Publications:</h4>
             <ul style="list-style-type: none; padding-left: 0;">
               <li style="margin-bottom: 10px;">
@@ -73,15 +68,13 @@
           </div>
         </details>
       </article>
-
-      <!-- <article class="card">
-        <div class="thumb">Image</div>
-        <h3><a href="#">US-India UI-ASSIST</a></h3>
-        <p>Testbed, applications, and tools for microgrids/active distribution systems with cyber-security measures.</p>
-      </article> -->
+<h2>Past Projects</h2>
       <article class="card" style="grid-column: span 3;"> 
         <!-- <div class="thumb" style="background-color: #f4f4f4; color: #555;"></div> -->
-        <div class="thumb" style="background: none; border: none;"> <img src="assets/doe_logo.png" alt="DOE Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> </div>
+        <div class="thumb" style="background: none; border: none; display: flex; gap: 15px;"> 
+          <img src="assets/doe_logo.png" alt="DOE Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> 
+        <img src="assets/UIASSIST_logo_color.png" alt="UI-ASSIST Logo" style="max-width: 45%; max-height: 100%; object-fit: contain;" />
+        </div>
         <h3>US-India UI-ASSIST (DOE/IUSSTF)</h3>
         <p><strong>Sponsor:</strong> U.S. DOE & Indo-US Science and Technology Foundation (Award DE-IA0000025)</p>
         <p><strong>Objective:</strong> A collaborative R&D effort between 30 US and Indian entities to bridge the gap between smart grid, energy storage, and renewable energy research, facilitating adoption in distribution system operation and planning.</p>
@@ -132,9 +125,9 @@
         <p>Delay-aware, fault-tolerant holonic control and optimization for networked CPS.</p>
       </article> -->
       <article class="card" style="grid-column: span 3;"> 
-        <div class="thumb" style="background-color: #f4f4f4; color: #555;">
-                  </div>
-        
+        <!-- <div class="thumb" style="background-color: #f4f4f4; color: #555;"> </div> -->
+        <div class="thumb" style="background: none; border: none;"> 
+          <img src="assets/nsf_logo.jpg" alt="NSF Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> </div>
         <h3>Holonic Control (aDaptioN) (NSF CPS)</h3>
         <p><strong>Sponsor:</strong> U.S. National Science Foundation (NSF) Cyber-Physical Systems (CPS) Program</p>
         <p><strong>Objective:</strong> Develop and validate distributed "holonic" control and optimization algorithms for critical infrastructures (specifically electric distribution grids) that are scalable, flexible, and resilient to cyber-attacks and communication delays.</p>
@@ -194,6 +187,7 @@
   </script>
 </body>
 </html>
+
 
 
 
