--- a/projects.html
+++ b/projects.html
@@ -84,8 +84,8 @@
       <article class="card" style="grid-column: span 3;"> 
         <!-- <div class="thumb" style="background-color: #f4f4f4; color: #555;"></div> -->
         <div class="thumb" style="background: none; border: none; display: flex; gap: 15px;"> 
-          <img src="assets/doe_logo.png" alt="DOE Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> 
-        <img src="assets/UIASSIST_logo_color.png" alt="UI-ASSIST Logo" style="max-width: 45%; max-height: 100%; object-fit: contain;" />
+          <img src="assets/arc_logo.png" alt="DOE Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> 
+        <img src="assets/arise_logo.png" alt="UI-ASSIST Logo" style="max-width: 45%; max-height: 100%; object-fit: contain;" />
         </div>
         <h3>ARC ARISE: HILLTOP Grid Modeling Consortium</h3>
         <p><strong>Sponsor:</strong> Appalachian Regional Commission (ARC) ARISE Project ($10M Multi-State Consortium)</p>
@@ -259,6 +259,7 @@
   </script>
 </body>
 </html>
+
 
 
 
