--- a/projects.html
+++ b/projects.html
@@ -207,7 +207,7 @@
       
       <article class="card" style="grid-column: span 3;"> 
         <div class="thumb" style="background: none; border: none; display: flex; gap: 15px;"> 
-          <img src="assets/seto_logo.png" alt="SETO Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> 
+          <img src="assets/seto_logo.jpg" alt="SETO Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> 
         <img src="assets/doe_logo.png" alt="DOE Logo" style="max-width: 45%; max-height: 100%; object-fit: contain;" />
         </div>
         <h3>RECUPERAT: Resilient Communities via Risk-driven Planning (DOE RACER)</h3>
@@ -376,6 +376,7 @@
   </script>
 </body>
 </html>
+
 
 
 
