Change greeting from 'Hello World' to 'Goodbye World'

--- a/projects.html
+++ b/projects.html
@@ -116,8 +116,8 @@
       <article class="card" style="grid-column: span 3;"> 
         <!-- <div class="thumb" style="background-color: #f4f4f4; color: #555;"></div> -->
         <div class="thumb" style="background: none; border: none; display: flex; gap: 15px;"> 
-          <img src="assets/arc_logo.png" alt="DOE Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> 
-        <img src="assets/arise_logo.png" alt="UI-ASSIST Logo" style="max-width: 45%; max-height: 100%; object-fit: contain;" />
+          <img src="assets/arc_logo.png" alt="ARC Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> 
+        <img src="assets/arise_logo.png" alt="ARISE Logo" style="max-width: 45%; max-height: 100%; object-fit: contain;" />
         </div>
         <h3>ARC ARISE: HILLTOP Grid Modeling Consortium</h3>
         <p><strong>Sponsor:</strong> Appalachian Regional Commission (ARC) ARISE Project ($10M Multi-State Consortium)</p>
@@ -207,7 +207,7 @@
       
       <article class="card" style="grid-column: span 3;"> 
         <div class="thumb" style="background: none; border: none; display: flex; gap: 15px;"> 
-          <img src="assets/seto_logo.jpg" alt="SETO Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> 
+          <img src="assets/seto_logo.jpg" alt="SETO Logo" style="width: 80%; height: 80%; object-fit: contain; padding: 15px;" /> 
         <img src="assets/doe_logo.png" alt="DOE Logo" style="max-width: 45%; max-height: 100%; object-fit: contain;" />
         </div>
         <h3>RECUPERAT: Resilient Communities via Risk-driven Planning (DOE RACER)</h3>
@@ -263,7 +263,7 @@
         <div class="thumb" style="background: none; border: none; display: flex; gap: 15px;"> 
           <img src="assets/netl_logo.jpg" alt="NETL Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 15px;" /> 
         <img src="assets/doe_logo.png" alt="DOE Logo" style="max-width: 45%; max-height: 100%; object-fit: contain;" />
-        
+        </div>
         <h3>EUREICA: Efficient UltRa Endpoint IoT-enabled Coordinated Architecture</h3>
         <p><strong>Sponsor:</strong> U.S. Department of Energy (DOE) & National Energy Technology Laboratory (NETL)</p>
         <p><strong>Objective:</strong> A resilience framework utilizing a network of trusted IoT devices and a Local Electricity Market (LEM) to manage distributed energy resources (DERs). The project focuses on mitigating cyberattacks and ensuring grid stability through situational awareness and coordinated asset management at the grid edge.</p>
@@ -479,6 +479,7 @@
   </script>
 </body>
 </html>
+
 
 
 
