Replace WVU logo image format from jpg to png

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
         </div>
 
         <div class="logo-box" aria-label="University logos" style="height: 60px; display: flex; align-items: center; justify-content: flex-end; background: transparent; gap: 15px;">
-           <img src="assets/wvu-logo.jpg" alt="West Virginia University" style="max-height: 50px; width: auto;" />
+           <img src="assets/wvu-logo.png" alt="West Virginia University" style="max-height: 50px; width: auto;" />
            <img src="assets/du_logo.png" alt="Dhaka University" style="max-height: 50px; width: auto;" />
         </div>
       </div>
