Update news.html with new achievements and grants

--- a/news.html
+++ b/news.html
@@ -33,7 +33,10 @@
 
     <h3>2026</h3>
     <ul>
-      <li>Received NSF travel grant for 2026 IEEE TPEC conference in College Station, TX, USA.</li>
+      <li> Served as an invited reviewer for IEEE Transactions on Smart Grid and reviewed the paper, titled "Quantitative Analysis of False Calm Cognitive Attacks and ERP-Inspired Neuroadaptive Defense in Smart Grids"</li>
+      <li> Received student grant for attending  "Winning Talent Together: HR Transformed - AI and Automation" event organized by Pittsburgh Technology Council (PTC)</li>
+      <li> Received NSF travel grant for 2026 IEEE TPEC conference in College Station, TX, USA.</li>
+      <li> Received certificate of completion for "Hazing: What You Need to Know" as a member of the WVU Hazing task force </li>
     </ul>
 
     <h3>2025</h3>
