--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
 
           <h3>Recent News/ Activities</h3>
           <ul>
-            <li>Recieved NSF Travel Grant to attend 2025 Texas Power & Energy Conference at College Station, Texas, USA</li>
-            <li>Received certificate of completion for "Hazing: What You Need to Know" as a member of the <a href="https://greeklife.wvu.edu/prevent-hazing/the-wvu-hazing-prevention-task-force-hazing-prevention-week"
-                                                                                                             target="_blank" rel="noopener">WVU Hazing task force</a></li>
+            <li>January: Served as an invited <a href="https://orcid.org/0000-0003-3057-9546" target="_blank" rel="noopener">reviewer</a> for IEEE Transactions on Smart Grid</li>
+            <li>January 2026: Received student grant for attending  "Winning Talent Together: HR Transformed - AI and Automation" event organized by Pittsburgh Technology Council (PTC)</li>
+            <li>December 2025: Received NSF Travel Grant to attend 2025 Texas Power & Energy Conference at College Station, Texas, USA</li>
             <li>More at <a href="news.html" target="_blank" rel="noopener">News</a></li>
             
           </ul>
@@ -291,6 +291,7 @@
   </script>
 </body>
 </html>
+
 
 
 
