--- a/news.html
+++ b/news.html
@@ -33,10 +33,11 @@
 
     <h3>2026</h3>
     <ul>
-      <li> Served as an invited reviewer for IEEE Transactions on Smart Grid and reviewed the paper, titled "Quantitative Analysis of False Calm Cognitive Attacks and ERP-Inspired Neuroadaptive Defense in Smart Grids"</li>
-      <li> Received student grant for attending  "Winning Talent Together: HR Transformed - AI and Automation" event organized by Pittsburgh Technology Council (PTC)</li>
-      <li> Received NSF travel grant for 2026 IEEE TPEC conference in College Station, TX, USA.</li>
-      <li> Received certificate of completion for "Hazing: What You Need to Know" as a member of the WVU Hazing task force </li>
+      <li><strong>January:</strong> Reached 100 citations on Google Scholar <a href="https://scholar.google.com/citations?user=QO_rPfMAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a></li>
+      <li><strong>January:</strong>Served as an invited reviewer for IEEE Transactions on Smart Grid and reviewed the paper, titled "Quantitative Analysis of False Calm Cognitive Attacks and ERP-Inspired Neuroadaptive Defense in Smart Grids"</li>
+      <li><strong>January:</strong> Received student grant for attending  "Winning Talent Together: HR Transformed - AI and Automation" event organized by Pittsburgh Technology Council (PTC)</li>
+      <li><strong>January:</strong> Received NSF travel grant for 2026 IEEE TPEC conference in College Station, TX, USA.</li>
+      <li><strong>January:</strong> Received certificate of completion for "Hazing: What You Need to Know" as a member of the WVU Hazing task force </li>
     </ul>
 
     <h3>2025</h3>
