--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
 
           <h3>Recent News/ Activities</h3>
           <ul>
+            <li>January 2026: Reached 100 citations on Google Scholar <a href="https://scholar.google.com/citations?user=QO_rPfMAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a></li>
             <li>January 2026: Served as an invited <a href="https://orcid.org/0000-0003-3057-9546" target="_blank" rel="noopener">reviewer</a> for IEEE Transactions on Smart Grid</li>
             <li>January 2026: Received student grant for attending  "Winning Talent Together: HR Transformed - AI and Automation" event organized by Pittsburgh Technology Council (PTC)</li>
             <li>January 2026: Received NSF Travel Grant to attend 2025 Texas Power & Energy Conference at College Station, Texas, USA</li>
@@ -291,6 +292,7 @@
   </script>
 </body>
 </html>
+
 
 
 
