--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<script data-goatcounter="https://fazleyrafy.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -292,6 +294,7 @@
   </script>
 </body>
 </html>
+
 
 
 
