--- a/news.html
+++ b/news.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -72,4 +73,6 @@
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
+<script data-goatcounter="https://fazleyrafy.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </html>
