--- a/publications.html
+++ b/publications.html
@@ -227,7 +227,10 @@
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
 </body>
+  <script data-goatcounter="https://fazleyrafy.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </html>
+
 
 
 
