--- a/publications.html
+++ b/publications.html
@@ -32,6 +32,11 @@
     <h3>Journals</h3>
     <ul>
       <li>
+        <strong>Md Fazley Rafy</strong>, P. Sharma, N. Patari, Anurag K. Srivastava, and A. Sharma (2026).
+        <strong>Edge-Driven Distributed Control for Power Distribution: A Real-Time Hardware-in-the-Loop Testbed for Industrial Automation and Applications.</strong>
+        Manuscript accepted in <em>IEEE Transactions on Industry Applications</em> (Special Issue on Industrial Automation and Intelligent Process Control — IAPC).
+      </li>
+      <li>
         J. Adan, <strong>Md Fazley Rafy</strong>, and A. K. Srivastava (2025).
         <strong>Cyber resilience in solar-rich networked microgrids: A real-time end-to-end DER outage management framework.</strong>
         <em>IEEE Transactions on Industry Applications</em>. doi: 10.1109/TIA.2025.3625887.
@@ -104,11 +109,6 @@
         Manuscript submitted to <em>IEEE Transactions on Power Delivery</em>.
       </li>
 
-      <li>
-        <strong>Md Fazley Rafy</strong>, P. Sharma, N. Patari, Anurag K. Srivastava, and A. Sharma (2025).
-        <strong>Edge-Driven Distributed Control for Power Distribution: A Real-Time Hardware-in-the-Loop Testbed for Industrial Automation and Applications.</strong>
-        Manuscript submitted to <em>IEEE Transactions on Industry Applications</em> (Special Issue on Industrial Automation and Intelligent Process Control — IAPC).
-      </li>
     </ul>
 
     <!-- ====================== CONFERENCES ====================== -->
@@ -154,11 +154,11 @@
         Manuscript submitted to <em>2026 IEEE Texas Power and Energy Conference (TPEC)</em>, College Station, TX, USA, 2026.
       </li>
 
-      <li>
+      <!-- <li>
         M. Hossain, G. Butler, <strong>Md Fazley Rafy</strong>, and Anurag K. Srivastava (2026).
         <strong>LLM-RAG for Temporal Evidence Graph (TEG) Querying using OT Parser and Rule-based Engine for Operator Support Against cyber-power events in OT Substation Automation System.</strong>
         Manuscript submitted to <em>2026 IEEE Texas Power and Energy Conference (TPEC)</em>, College Station, TX, USA, 2026.
-      </li>
+      </li> -->
     </ul>
 
     <!-- ====================== BOOK CHAPTERS ====================== -->
@@ -230,6 +230,7 @@
   <script data-goatcounter="https://fazleyrafy.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </html>
+
 
 
 
