--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
 
           <h3>Recent News/ Activities</h3>
           <ul>
+            <li>January 2026: Nominated as a finalist for the 2026 Travis Stimeling Awards for Mentoring of Undergraduates in Research</li>
             <li>January 2026: Reached 100 citations on Google Scholar <a href="https://scholar.google.com/citations?user=QO_rPfMAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a></li>
             <li>January 2026: Served as an invited <a href="https://orcid.org/0000-0003-3057-9546" target="_blank" rel="noopener">reviewer</a> for IEEE Transactions on Smart Grid</li>
             <li>January 2026: Received student grant for attending  "Winning Talent Together: HR Transformed - AI and Automation" event organized by Pittsburgh Technology Council (PTC)</li>
@@ -294,6 +295,7 @@
 <script data-goatcounter="https://fazleyrafy.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
 </html>
+
 
 
 
